<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DepartmentActivity">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioCS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_cs" />

        <RadioButton
            android:id="@+id/radioSIS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_sis" />

        <RadioButton
            android:id="@+id/radioBI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_bi" />

        <RadioButton
            android:id="@+id/radioDS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/department_ds" />
    </RadioGroup>

    <Button
        android:id="@+id/departmentCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/departmentSubmit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/departmentSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/select_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/departmentCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>